[package]
name = "spooky_jam"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
# bevy-trait-query = "0.5.1"
strum = "0.26.3"
strum_macros = "0.26.4"
rand = "0.8.5"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = ["derive"] }
leafwing-input-manager = "0.15.1"
bevy_light_2d = "0.4.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 1     # less precise locations

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
debug = false # no debug symbols for deps
opt-level = 2 # makes their code smaller too

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
